feat: added variables, bug fixes, refactors

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,4 @@ prefix: '&7[&4Red&rScript&7] &r'
 commandExecution:
   done: '&fScript fertig ausgeführt.'
   starting: '&fStarte Kommandoablauf...'
+  timeout: '&cTimeout! Kommandoablauf abgebrochen.'
