Changing version, Adding author

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: RedScript
 version: '${project.version}'
 main: me.kx.redscript.RedScript
-api-version: 1.17
-author: kx
+api-version: 1.19
+authors: [ kx, RedstoneFuture ]
